# Image-Boilerplate

./: CMakeLists.txt
nix/: shell.nix
src/main/: main.c
